# ProofOfClaw

./: .dockerignore  .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  Dockerfile.frontend  Dockerfile.node  LICENSE  Makefile  README.md  ZK_SETUP.md  deploy_0g_testnet.sh  deploy_and_verify.sh  deploy_sepolia.sh  docker-compose.yml  generate_proof.rs  get_image_id.rs  package.json  proof_output.json  proofofclaw.html  spec.md  test-0g-mint.mjs  test_proof_end_to_end.sh  test_proof_local.sh  test_zk_e2e.sh  verify_onchain.sh
.claude/: settings.json
.github/workflows/: ci.yml
1claw-server/: README.md  package-lock.json  package.json  server.js
agent/: Cargo.toml
agent/crates/proof_of_claw/: Cargo.toml
agent/crates/proof_of_claw/src/: config.rs  eip8004.rs  ens_dm3.rs  inft.rs  injection_detector.rs  ironclaw_adapter.rs  job_scheduler.rs  ledger.rs  lib.rs  policy_engine.rs  proof_generator.rs  registry.rs  types.rs  zero_g.rs
agent/src/: api.rs  main.rs  proof_agent.rs
cli/: package-lock.json  package.json
cli/src/: index.ts
cli/src/commands/: agent.ts  backup.ts  epoch.ts  organization.ts  swarm.ts
contracts/: .env.deploy  deploy-tx.json
contracts/clear-signing/: proofofclaw.json
contracts/script/: Deploy.s.sol  Deploy0G.s.sol  Deploy0GTestnet.s.sol  DeployAndVerify.s.sol  DeployMultiChain.s.sol  DeployRealVerifier.s.sol  DeploySepolia.s.sol  DeploySwarm.s.sol
contracts/src/: EIP8004Integration.sol  ProofOfClawINFT.sol  ProofOfClawVerifier.sol  RiscZeroGroth16Verifier.sol  RiscZeroMockVerifier.sol  SoulVaultERC8004RegistryAdapter.sol  SoulVaultSwarm.sol
contracts/src/interfaces/: ISoulVaultSwarm.sol
contracts/src/mocks/: MockRiscZeroVerifier.sol
contracts/test/: ProofOfClaw.t.sol
delivery-service/: package-lock.json  package.json  server.js
dm3Daemon/: .env.example  package-lock.json  package.json  server.js
frontend/: 0g-registration.js  agents.html  approve.html  auth-modules-panel.css  auth-modules-panel.js  auth-modules.html  buffer-inject.js  config-validator.js  crypto.js  custom-auth.html  dashboard.html  docs.html  ens-resolver.js  index.html  kanban.html  ledger-entry.js  ledger-sdk.js  masterclaw-openclaw-backup.yaml  messages.html  nav.js  nginx.conf  openclaw-backup-format.md  openclaw-backup-schema.js  poc-api.js  proofs.html  sanitize.js  shared.css  shared.js  soul-vault.html  viem-client.js  wallet.js  zkverifier.js
proof_of_claw/: Cargo.toml
proof_of_claw/src/: config.rs  ens_dm3.rs  inft.rs  ironclaw_adapter.rs  ledger.rs  lib.rs  policy_engine.rs  proof_generator.rs  zero_g.rs
scripts/: build-env.js  deploy-0g-testnet.sh  swap-to-real-verifier.sh
swarm-bridge/: bridge.mjs  package-lock.json  package.json
zkvm/: Cargo.toml  README.md
zkvm/boundless-prover/: Cargo.toml
zkvm/boundless-prover/src/: main.rs
zkvm/host/: Cargo.toml  build.rs
zkvm/host/src/: main.rs
zkvm/image-id/: Cargo.toml
zkvm/image-id/src/: main.rs
zkvm/wasm-verifier/: Cargo.toml
zkvm/wasm-verifier/src/: lib.rs
(+7 files in other folders)
