[package]
name = "boundless-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
boundless-market = { version = "1.4", default-features = false, features = [] }
risc0-zkvm = "1.2"
alloy = { version = "1.0", features = ["full", "signer-local"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
hex = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
