[package]
name = "proof-of-claw-host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4"
bincode = "1.3"

[build-dependencies]
risc0-build = { workspace = true }
