[package]
name = "proof-of-claw-host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1.0"
hex = "0.4"
sha2 = "0.10"

[build-dependencies]
# risc0-build not needed — guest ELF loaded via include_bytes!
