[package]
name = "proof-of-claw-verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
js-sys = "0.3"

[profile.release]
opt-level = "s"
lto = true
